@startuml
entity Dancer {
   * firstname
   * lastname
   * address
   age
}

entity DanceTeacher{
}

entity Group {
   * name
   ageLimit
   dancerLimit
}

entity Danceclass{
   * time
}

entity Room{
    * number
    personLimit
}

Dancer ||--o| DanceTeacher
Dancer }|--|| Group
Group ||--|{ Danceclass
Danceclass ||--|{ Room
@enduml
